--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Simple Environment Monitor System</title>
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 
+    <div id="page">
+
+        <div class="row" id="commands">
+            <h1>Simple Environment Monitor System</h1>
+        </div>
+
+        <div class="row">
+
+        </div>
+
+    </div>
+
+    <script src="/static/dashboard.js"></script>
 </body>
+
 </html>
+
