--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -19,7 +19,7 @@
                 <h1>Simple Environment Monitor System</h1>
 
                  <div id="commands-wrap">
-                    <a href="#" id="new-monitor" class="btn btn-primary pull-right">Adicionar Monitor</a>
+                    <a href="#" id="new-monitor" class="btn btn-primary pull-right">Add New Monitor</a>
                     <div class="clear"></div>
                     <div id="form-wrap-monitor" class="hidden">
                         <form id="form-monitor" action="/api/monitors" method="post">
@@ -38,7 +38,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="monitor-url">Url:</label>
+                                <label for="monitor-url">Url or Host:</label>
                                 <input type="text" name="url" id="monitor-url"/>
                             </div>
 
