init form hidden and update version.

--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -21,7 +21,7 @@
                  <div id="commands-wrap">
                     <a href="#" id="new-monitor" class="btn btn-primary pull-right">Add New Monitor</a>
                     <div class="clear"></div>
-                    <div id="form-wrap-monitor" class="wrap-monitor" class="hidden">
+                    <div id="form-wrap-monitor" class="wrap-monitor hidden">
                         <form id="form-monitor" action="/api/monitors" method="post">
                             <div class="form-group">
                                 <label for="monitor-type">Type:</label>
