sorting monitors in interface.

--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -80,6 +80,7 @@
     <script src="/static/rest_client.js"></script>
     <script src="/static/monitor_form.js"></script>
     <script src="/static/monitor.js"></script>
+    <script src="/static/sortable.min.js"></script>
     <script src="/static/dashboard.js"></script>
 </body>
 
