creating groups for monitors.

--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -33,6 +33,11 @@
                             </div>
 
                             <div class="form-group">
+                                <label for="monitor-group">Group:</label>
+                                <input type="text" name="group" id="monitor-group" class="form-control" />
+                            </div>
+
+                            <div class="form-group">
                                 <label for="monitor-label">Label:</label>
                                 <input type="text" name="label" id="monitor-label" class="form-control" />
                             </div>
@@ -54,21 +59,37 @@
 
         <div class="row">
             <div class="col-md-12">
+                <div id="groups-wrap">
+                    <ul class="nav nav-tabs">
+                        {% if "" in groups_monitors %}
+                            <li><a href="#" data-group="">Default</a></li>
+                        {% end %}
+
+                        {% for group in groups %}
+                            <li><a href="#" data-group="{{group}}">{{group}}</a></li>
+                        {% end %}
+                    </ul>
+                </div>
                 <div id="monitors">
-                    {% for monitor in monitors %}
-                        <div class="monitor-entry alert alert-success">
-                            <h2>
-                                <a class="monitor-label" href="{{monitor.url}}" target="_blank">{{monitor.label}}</a>
-                            </h2>
-                            <hr />
-                            <p>
-                                <span class="monitor-url">{{monitor.url}}</span>
-                            </p>
-                            <p>
-                                <span class="monitor-status"></span>
-                            </p>
-                            <a href="#" class="monitor-remove btn btn-xs btn-danger pull-right">remover</a>
+                    {% for group in groups_monitors %}
+                        <div class="group-wrapper" id="{{group}}">
+                            {% for monitor in groups_monitors[group] %}
+                                <div class="monitor-entry alert alert-success">
+                                    <h2>
+                                        <a class="monitor-label" href="{{monitor.url}}" target="_blank">{{monitor.label}}</a>
+                                    </h2>
+                                    <hr />
+                                    <p>
+                                        <span class="monitor-url">{{monitor.url}}</span>
+                                    </p>
+                                    <p>
+                                        <span class="monitor-status"></span>
+                                    </p>
+                                    <a href="#" class="monitor-remove btn btn-xs btn-danger pull-right">remover</a>
+                                </div>
+                            {% end %}
                         </div>
+
                     {% end %}
                 </div>
             </div>
