fixing select field and put version on dashboard.

--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -100,6 +100,10 @@
 
     </div>
 
+    <footer>
+        <p id="version">Version: <span>{{version}}</span></p>
+    </footer>
+
     <script src="/static/rest_client.js"></script>
     <script src="/static/monitor_form.js"></script>
     <script src="/static/monitor.js"></script>
