config to set polling interval.

--- a/sems/server/templates/dashboard.html
+++ b/sems/server/templates/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ static_url("bootstrap.css") }}" type="text/css" />
     <link rel="stylesheet" href="{{ static_url("bootstrap-theme.css") }}" type="text/css" />
     <link rel="stylesheet" href="{{ static_url("dashboard.css") }}" type="text/css" />
+    <meta content='{{ polling_interval }}' name='polling-interval'>
 </head>
 
 <body>
