--- a/sems/server/templates/dashboard.slim.html
+++ b/sems/server/templates/dashboard.slim.html
@@ -12,7 +12,7 @@
 
     <title>sems</title>
 
-    <link rel="stylesheet" href="/static/v2/sems.css" ) }}">
+    <link rel="stylesheet" href="/static/sems.css" ) }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -124,7 +124,7 @@
         </div>
     </script>
 
-    <script src="../static/v2/jquery-3.4.1.min.js"></script>
+    <script src="../static/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -132,9 +132,8 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src="/static/rest_client.js"></script>
-    <script src="/static/v2/monitor.js"></script>
-    <script src="/static/v2/monitor_form.js"></script>
+    <script src="/static/monitor_slim.js"></script>
+    <script src="/static/monitor_form_slim.js"></script>
 </body>
 
 </html>
